[gd_scene load_steps=6 format=3 uid="uid://ey5f4rq0py70"]

[ext_resource type="Script" path="res://scenes/minigames/meditate.gd" id="1_iurtj"]
[ext_resource type="Texture2D" uid="uid://bel8j4otxwjab" path="res://particles/fire_02.png" id="2_q1vqf"]

[sub_resource type="LabelSettings" id="LabelSettings_4jmom"]
font_size = 64

[sub_resource type="CircleShape2D" id="CircleShape2D_xjrve"]
radius = 64.0

[sub_resource type="Gradient" id="Gradient_7r0rl"]
offsets = PackedFloat32Array(0, 0.0614251, 0.185913, 0.610975, 0.864046, 1)
colors = PackedColorArray(0, 0, 0, 0, 0.857422, 0.358524, 0.173762, 1, 0.636719, 0.588306, 0.213898, 1, 0.569712, 0.0707721, 0.173574, 1, 0.638559, 0.0775972, 0.125299, 1, 0, 0, 0, 0.227451)

[node name="meditate" type="CanvasLayer" node_paths=PackedStringArray("progress_bar")]
script = ExtResource("1_iurtj")
progress_bar = NodePath("CenterContainer/VBoxContainer/ProgressBar")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Follow the flame with the mouse"
label_settings = SubResource("LabelSettings_4jmom")

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 11.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1152, 648)
size_2d_override = Vector2i(1152, 648)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="flameMarkers" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(384, 216)

[node name="Marker2D" type="Marker2D" parent="SubViewportContainer/SubViewport/flameMarkers"]
position = Vector2(100, 100)

[node name="Marker2D2" type="Marker2D" parent="SubViewportContainer/SubViewport/flameMarkers"]
position = Vector2(900, 100)

[node name="Marker2D3" type="Marker2D" parent="SubViewportContainer/SubViewport/flameMarkers"]
position = Vector2(100, 500)

[node name="Marker2D4" type="Marker2D" parent="SubViewportContainer/SubViewport/flameMarkers"]
position = Vector2(900, 500)

[node name="flameArea" type="Area2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(582, 154)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/flameArea"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("CircleShape2D_xjrve")

[node name="CPUParticles2D" type="CPUParticles2D" parent="SubViewportContainer/SubViewport/flameArea"]
amount = 32
texture = ExtResource("2_q1vqf")
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(2.08165e-12, -1)
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
angle_max = 360.0
scale_amount_min = 0.25
scale_amount_max = 0.5
color_ramp = SubResource("Gradient_7r0rl")

[connection signal="mouse_entered" from="SubViewportContainer/SubViewport/flameArea" to="." method="_entered"]
[connection signal="mouse_entered" from="SubViewportContainer/SubViewport/flameArea" to="." method="_first_entered" flags=6]
[connection signal="mouse_exited" from="SubViewportContainer/SubViewport/flameArea" to="." method="_exited"]
